services/post-service/base/consumer-deployment.yaml
# services/post-service/base/consumer-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: post-consumer
  labels:
    app: post-service
    component: consumer
    managed-by: gitops
spec:
  replicas: 1
  selector:
    matchLabels:
      app: post-service
      component: consumer
  template:
    metadata:
      labels:
        app: post-service
        component: consumer
    spec:
      serviceAccountName: post-service-sa
      containers:
      - name: post-consumer
        image: alphaxad9/post_service:0.0.5
        imagePullPolicy: IfNotPresent
        command: ["/app/kafka-consumer"]
        resources:
          requests:
            memory: "256Mi"
            cpu: "100m"
          limits:
            memory: "512Mi"
            cpu: "250m"
      securityContext:
        runAsNonRoot: true
        runAsUser: 1001
        runAsGroup: 1001
        fsGroup: 1001
